<resources>
    <string name="app_name">EventAlarm</string>
    <string name="background_home_desc">Background home texture</string>
    <string name="event_alarm_icon_desc">Event Alarm Icon Description</string>
    <string name="home_welcome">Te damos la bienvenida a la aplicación de alarmas que tanto has esperado, aquí podrás crear ...</string>
    <string name="home_welcome_info">Info</string>
    <string name="home_welcome_category_clock">Category Clock</string>
    <string name="home_welcome_clock_title">Alarmas por hora</string>
    <string name="home_welcome_clock_example">05:30 - Despertar</string>
    <string name="home_welcome_clock_require">* No requiere Internet</string>
    <string name="home_welcome_category_place">Category Place</string>
    <string name="home_welcome_place_title">Alarmas por lugar</string>
    <string name="home_welcome_place_example">Impresiones ABC y Cia</string>
    <string name="home_welcome_place_example2">Reclamar fotos del evento</string>
    <string name="home_welcome_place_require">* Requiere Internet</string>
    <string name="home_welcome_category_type">Category Type</string>
    <string name="home_welcome_type_title">Alarmas por tipo</string>
    <string name="home_welcome_type_example">Cualquier "Droguería"</string>
    <string name="home_welcome_type_example2">Comprar medicamentos</string>
    <string name="home_welcome_type_require">* Requiere Internet</string>
    <string name="home_welcome_not_show_more">no volver a mostrar este mensaje</string>
    <string name="register_email">Para iniciar digita tu correo electrónico</string>
    <string name="register_email_field">nombre@example.com</string>
    <string name="register_email_send_desc">enviar</string>
    <string name="register_code_desc">Hemos enviado al correo suministrado un código de autenticación para continuar</string>
    <string name="register_code_label">Código: </string>
    <string name="register_code_button">Ingresar</string>
    <string name="register_code_placeholder">000000</string>
    <string name="menu_clock">Hora</string>
    <string name="menu_place">Lugar</string>
    <string name="menu_type">Tipo</string>
    <string name="cancel">Cancelar</string>
    <string name="save">Guardar</string>
    <string name="next">Siguiente</string>
    <string name="back">Atrás</string>
    <string name="delay">Posponer</string>
    <string name="stop">Detener</string>
    <string name="fragment_clock_title">Hora</string>
    <string name="fragment_clock_desc">Usa esta opción cuando conozcas la hora exacta en la que quieres tu alarma</string>
    <string name="fragment_clock_inst">Configura tu primera alarma haciendo clic en la opción </string>
    <string name="fragment_place_title">Lugar</string>
    <string name="fragment_place_desc">Usa esta opción cuando necesites recordar algo justo en el momento que te encuentres cerca a un lugar específico.Podrás personalizar aspectos como:</string>
    <string name="fragment_place_detail_fromto">Desde / Hasta: </string>
    <string name="fragment_place_detail_fromto_desc">Indica en qué horario deseas que la alarma esté activa</string>
    <string name="fragment_place_detail_dist">Distancia de proximidad: </string>
    <string name="fragment_place_detail_dist_desc">Indica a cuantos metros de distancia del lugar específico, debe activarse tu alarma</string>
    <string name="fragment_place_inst">Configura tu primera alarma haciendo clic en la opción </string>
    <string name="fragment_type_title">Tipo de lugar</string>
    <string name="fragment_type_desc">Usa esta opción cuando necesites recordar algo al estar cerca de un tipo de lugar sin que necesites alguno en específico, por ejemplo: una droguería.
Podrás personalizar aspectos como:</string>
    <string name="fragment_type_detail_fromto">Desde / Hasta: </string>
    <string name="fragment_type_detail_fromto_desc">Indica en qué horario deseas que la alarma esté activa</string>
    <string name="fragment_type_detail_dist">Distancia de proximidad: </string>
    <string name="fragment_type_detail_dist_desc">Indica a cuantos metros de distancia de un lugar que sea del tipo que necesitas, debe activarse tu alarma</string>
    <string name="fragment_type_inst">Configura tu primera alarma haciendo clic en la opción </string>
    <string name="clock_add_title">Hora</string>
    <string name="clock_add_label">Etiqueta: </string>
    <string name="clock_add_label_placeholder">nombre de alarma</string>
    <string name="clock_add_loop">Periodicidad: </string>
    <string name="clock_add_loop_placeholder">seleccione</string>
    <string name="clock_add_zone">Ajustar zona horaria</string>
    <string name="clock_add_zone_more">ver más ...</string>
    <string name="clock_add_tone">Tono: </string>
    <string name="clock_add_tone_placeholder">seleccione un valor</string>
    <string name="place_add_title">Lugar</string>
    <string name="type_add_title">Tipo</string>
    <string name="clock_list_item_time">05:30</string>
    <string name="clock_list_item_desc">Despertador 1, entre semana</string>
    <string name="repeat_title">Periodicidad</string>
    <string name="repeat_label">Repetir cada:</string>
    <string name="repeat_week_sunday">Domingo</string>
    <string name="repeat_week_monday">Lunes</string>
    <string name="repeat_week_tuesday">Martes</string>
    <string name="repeat_week_wednesday">Miércoles</string>
    <string name="repeat_week_thursday">Jueves</string>
    <string name="repeat_week_friday">Viernes</string>
    <string name="repeat_week_saturday">Sábado</string>
    <string name="tone_title">Tono</string>
    <string name="tone_label">Selecciona el tono de la alarma</string>
    <string name="tone_search_label">Buscar: </string>
    <string name="tone_search_label_placeholder">buscar tono</string>
    <string name="tone_search_items">Acorde\nBanbuco\nCosmos\n........\n........</string>
    <string name="timezone_title">Ajustar Zona Horaria</string>
    <string name="timezone_desc">Tus alarmas se ajustarán a tu estilo de vida. \n\n Al activar el ajuste de zona horaria:</string>
    <string name="timezone_expl">La alarma se ajustará a la zona horaria donde te encuentres, es decir, se ejecutará en el país donde te encuentres, incluso sin tener que ajustar la zona horaria en la configuración de tu celular</string>
    <string name="clock_alarm_title">05:30</string>
    <string name="clock_alarm_notification">Despertador 1</string>
    <string name="place_map_title">Lugar</string>
    <string name="place_map_label">Selecciona un lugar</string>
    <string name="place_map_desc">Selecciona el lugar que deseas referenciar, manteniendo presionada su ubicación en el mapa, luego selecciona el botón siguiente</string>
    <string name="place_add_map">Lugar: </string>
    <string name="place_add_map_placeholder">Impresiones y cia</string>
    <string name="place_add_label">Etiqueta: </string>
    <string name="place_add_label_placeholder">nombre de alarma</string>
    <string name="place_add_from">Recordar desde: </string>
    <string name="place_add_from_placeholder">16:52</string>
    <string name="place_add_to">Recordar hasta: </string>
    <string name="place_add_to_placeholder">00:00</string>
    <string name="place_add_dist">Distancia de proximidad (mts)</string>
    <string name="place_add_dist_placeholder">Distancia en metros</string>
    <string name="place_add_loop">Periodicidad</string>
    <string name="place_add_loop_placeholder">seleccione</string>
    <string name="place_add_tone">Tono: </string>
    <string name="place_add_tone_placeholder">seleccione un valor</string>
    <string name="fragment_place_list_title">Lugar</string>
    <string name="fr_place_list_desc">Usa esta opción cuando conozcas el lugar donde deseas que se active tu alarma</string>
    <string name="place_list_item_text">Reclamar fotos</string>
    <string name="place_list_item_desc">Impresiones y cia, Fin de semana</string>
    <string name="type_add_category">Tipo de lugar: </string>
    <string name="type_add_category_value">Droguería</string>
    <string name="type_add_label">Etiqueta: </string>
    <string name="type_add_label_typeholder">nombre de alarma</string>
    <string name="type_add_from">Recordar desde: </string>
    <string name="type_add_from_typeholder">16:52</string>
    <string name="type_add_to">Recordar hasta: </string>
    <string name="type_add_to_typeholder">00:00</string>
    <string name="type_add_dist">Distancia de proximidad (mts)</string>
    <string name="type_add_dist_typeholder">distancia en metros</string>
    <string name="type_add_loop">Periodicidad: </string>
    <string name="type_add_loop_typeholder">seleccione</string>
    <string name="type_add_tone">Tono: </string>
    <string name="clock_add_tone_typeholder">seleccione un valor</string>
    <string name="type_find_title">Tipo de lugar</string>
    <string name="type_find_label">Selecciona el tipo de lugar que necesitas configurar en tu alarma</string>
    <string name="type_find_search_label">Buscar: </string>
    <string name="type_find_search_label_placeholder">buscar tipo</string>
    <string name="type_find_search_items">Droguería\nPapelería\nSupermercado\nBoutique\n..........</string>
    <string name="fr_type_list_title">Tipo de lugar</string>
    <string name="fr_type_list_desc">Usa esta opción cuando no necesites un lugar conocido o específico para que se active tu alarma</string>
    <string name="type_list_item_text">Comprar medicamentos</string>
    <string name="type_list_item_desc">Droguería, Lunes, Martes, Jueves</string>
    <string name="place_alarm_title">Reclamar fotos</string>
    <string name="place_alarm_desc">Impresiones y Cia</string>
    <string name="place_alarm_notification">Hora actual: 17:25</string>
    <string name="place_alarm_notification2">&gt;&gt; Estás a 80 mts &lt;&lt;</string>
    <string name="type_alarm_title">Comprar medicamentos</string>
    <string name="type_alarm_desc">Droguería</string>
    <string name="type_alarm_notification">Hora actual: 17:25</string>
    <string name="type_alarm_notification2">&gt;&gt; Estás a 80 mts &lt;&lt;</string>
</resources>