<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingStart="5pt"
    android:paddingEnd="5pt"
    tools:context=".TypeFindActivity">

    <ImageView
        android:id="@+id/BackgroundMenuClock"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/background_home_desc"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/background_main" />

    <Button
        android:id="@+id/type_find_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_inactive"
        android:paddingHorizontal="30dp"
        android:text="@string/back"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/gray_8E8E93"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/type_find_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/type_find_title"
        android:textColor="@color/blue_00003D"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/type_find_back"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/type_find_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:fontFamily="@font/open_sans"
        android:lineHeight="18sp"
        android:paddingRight="10pt"
        android:text="@string/type_find_label"
        android:textAlignment="textStart"
        android:textColor="@color/blue_014BA0"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type_find_title" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type_find_label">

        <TextView
            android:id="@+id/type_find_search_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/open_sans"
            android:lineHeight="18sp"
            android:paddingRight="10pt"
            android:text="@string/type_find_search_label"
            android:textAlignment="textStart"
            android:textColor="@color/blue_00276C"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/type_find_search_label_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border_field"
            android:ems="10"
            android:hint="@string/type_find_search_label_placeholder"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColorHint="@color/gray_C7C7CC"
            android:textSize="17sp"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>